@startuml
left to right direction
hide empty members
skinparam classAttributeIconSize 0

title <b>OMG Game Development Kit (GDK)</b>\n<font size=14>launcher folder</font>

package launcher {
  class GDKApplication {
    + MODULES_DIRECTORY_PATH : String
    + start(primaryStage: Stage)
    + stop()
    + main(args: String[])
  }
}

package "launcher.lifecycle.start" {
  class Startup
}

package "launcher.lifecycle.stop" {
  class Shutdown
}

package gdk {
  class Logging
}

GDKApplication --> Startup : delegates start()
GDKApplication --> Shutdown : delegates stop()
GDKApplication --> Logging : shutdown hook

@enduml
